# cli-secret-manager

./: Cargo.toml  README.md  go.mod  readme.md
cmd/cli/: main.go
pkg/api/: client.go
pkg/app/: app.go
pkg/ui/: forms.go  list.go  menu.go  prompt.go  screens.go  status.go  ui.go
src/: crypto.rs  main.rs  storage.rs
